add register by tg
